# python-web-m6-reference-on-render

./: manage.py  pyproject.toml  render.yaml
aws_marketplace_app/: admin.py  apps.py  forms.py  models.py  urls.py
aws_marketplace_app/migrations/: 0001_initial.py  0002_auto_20211123_1118.py  0003_auto_20211123_1138.py  0004_userprofile.py  0005_posting_description.py  0006_category_parent.py  0007_postingimage.py  0008_userprofile_is_deleted.py  0009_auto_20211124_1436.py  0010_auto_20220113_1639.py  0011_auto_20220114_0932.py  0012_auto_20220114_0936.py
aws_marketplace_app/templates/buying/: browse.html  detail.html  order_detail.html  orders.html  sidebar.html  wishlist.html
aws_marketplace_app/templates/front/: index.html
aws_marketplace_app/templates/main/: front_layout.html  layout.html  security_layout.html
aws_marketplace_app/templates/security/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  register.html
aws_marketplace_app/templates/selling/: create.html  detail.html  edit.html  fulfillment_detail.html  fulfillments.html  listings.html  sidebar.html
aws_marketplace_app/templates/user/: change-password.html  profile.html  seller-profile.html  settings.html  sidebar.html
aws_marketplace_app/templates/widgets/: image_widget.html  image_widget_v2.html
aws_marketplace_app/views/: __init__.py  auth.py  browse.py  buying.py  front.py  profile.py  selling.py  settings.py
aws_marketplace_project/: asgi.py  settings.py  urls.py  wsgi.py
(+5 files in other folders)
