[tool.poetry]
name = "aws_marketplace_project"
version = "0.1.0"
description = "AWS Marketpace"
authors = ["Seth Marquin Busque <sethmarquin.busque@awsys-i.com>"]

[tool.poetry.dependencies]
asgiref = "^3.4.1"
autopep8 = "^1.6.0"
beautifulsoup4 = "^4.10.0"
boto3 = "^1.20.38"
botocore = "^1.23.38"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.9"
crispy-bootstrap5 = "^0.6"
defusedxml = "^0.7.1"
diff-match-patch = "^20200713"
dj-database-url = "^0.5.0"
Django = "^3.2.9"
django-bootstrap-v5 = "^1.0.7"
django-crispy-forms = "^1.13.0"
django-import-export = "^2.7.1"
django-libs = "^2.0.3"
django-on-heroku = "^1.1.2"
django-storages = "^1.12.3"
docopt = "^0.6.2"
et-xmlfile = "^1.1.0"
fontawesome-free = "^5.15.4"
future = "^0.18.2"
gunicorn = "^20.0.4"
idna = "^3.3"
jmespath = "^0.10.0"
jsonpickle = "^2.0.0"
MarkupPy = "^1.14"
odfpy = "^1.4.1"
openpyxl = "^3.0.9"
Pillow = "^8.4.0"
pipreqs = "^0.4.11"
psycopg2 = "^2.8.5"
psycopg2-binary = "^2.8.5"
pycodestyle = "^2.8.0"
python = "3.8.10"
python-dateutil = "^2.8.2"
pytz = "^2021.3"
PyYAML = "^6.0"
requests = "^2.27.0"
s3transfer = "^0.5.0"
six = "^1.16.0"
soupsieve = "^2.3.1"
sqlparse = "^0.4.2"
tablib = "^3.1.0"
toml = "^0.10.2"
treelib = "^1.6.1"
urllib3 = "^1.26.7"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
xlrd = "^2.0.1"
xlwt = "^1.3.0"
yarg = "^0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
